fix(ui): correcion con z-index en el overlay del modal

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -315,6 +315,7 @@ input[type=checkbox]:active + .box{
 }
 
 .modal__overlay {
+    z-index: 1001;
   background: rgba(0,0,0,0.5);
   position: fixed;
   top: 0;
